[gd_scene load_steps=5 format=3 uid="uid://btysvrle8ishm"]

[ext_resource type="Texture2D" uid="uid://cnmp10h3mq10t" path="res://assets/sprites/piece_icon/1.png" id="1"]
[ext_resource type="Script" path="res://src/piece.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bf1bnk5vrx3e8" path="res://assets/sprites/Marble.png" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 10.0499

[node name="Piece" type="Area2D"]
script = ExtResource("2")

[node name="PieceBase" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="PieceSprite" type="Sprite2D" parent="."]
texture = ExtResource("3")

[node name="PieceIconSprite" type="Sprite2D" parent="."]
texture = ExtResource("1")
